fixing keyboard scrolling on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,3 +6,9 @@
     background-position: center;
     opacity: 0.9;
 } */
+html,
+body,
+#root {
+  height: 100%;
+  overflow: hidden;
+}
